fixed whitespace problem in operations

--- a/spec/spec.less
+++ b/spec/spec.less
@@ -17,6 +17,7 @@ lala
     @fi: @fa;
     @fa: grey;
     color: .alt > @base-color - .alt > @base-color;
+    margin: 10px -10px 4px 2px;
     line-height: 1999px;
     .blah {
       .bloop {
